add final commit

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Убираем маты</h1> 
+    <p><textarea name="" id="" cols="30" rows="10"></textarea></p>
+    <p><button>Push</button></p>
+    <div id="out"></div>
     <script src="./js/script.js"></script>
 </body>
 </html>
